--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
 
                 </div>
-                <h2>Recently Played</h2>
+                <h2>Favorite Playlists </h2>
                 <div class="card-container">
                     <div class="card" id="card-1">
                         <img src="./assets/card1img.jpeg" alt="" class="card-img">
